--- a/src/app/components/editor/editor.css
+++ b/src/app/components/editor/editor.css
@@ -36,7 +36,7 @@
   .editor-container {
 	margin: 20px auto 20px auto;
 	border-radius: 2px;
-	max-width: 600px;
+	max-width: 800px;
 	color: #000;
 	position: relative;
 	line-height: 20px;
@@ -49,17 +49,19 @@
   .editor-inner {
 	background: #242841;
 	position: relative;
-	border-radius: 0 0 10px 10px;
+	border-radius: 10px;
+  }
+  .editor-inner.editable {
+	border-radius: 0;
   }
   
   .editor-input {
-	min-height: 150px;
 	resize: none;
 	font-size: 15px;
 	position: relative;
 	tab-size: 1;
 	outline: 0;
-	padding: 15px 10px;
+	padding: 20px;
 	caret-color: #888;
 	color: #f5f579;
   }
@@ -69,8 +71,8 @@
 	overflow: hidden;
 	position: absolute;
 	text-overflow: ellipsis;
-	top: 15px;
-	left: 10px;
+	top: 20px;
+	left: 20px;
 	font-size: 15px;
 	user-select: none;
 	display: inline-block;
